--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "serde-redis"
-version = "0.14.0"
-authors = ["Joe Wilm <joe@jwilm.com>"]
+version = "0.29.0"
+authors = [
+    "Joe Wilm <joe@jwilm.com>",
+    "b00f (@b00f)"
+]
 description = "Serde deserialization for redis-rs"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
@@ -10,7 +13,7 @@ documentation = "https://docs.rs/serde-redis"
 edition = "2018"
 
 [dependencies]
-redis = "0.24.0"
+redis = "0.29"
 serde = "1.0"
 
 [dev-dependencies]
