chore: rename package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "serde-redis"
+name = "serde_redis"
 version = "0.29.0"
 authors = [
     "Joe Wilm <joe@jwilm.com>",
@@ -8,7 +8,7 @@ authors = [
 description = "Serde deserialization for redis-rs"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
-repository = "https://github.com/OneSignal/serde-redis"
+repository = "https://github.com/ezex-io/serde-redis"
 documentation = "https://docs.rs/serde-redis"
 edition = "2024"
 
